# FreeCAD-Gridfinity-Workbench

./: .gitignore  CONTRIBUTING.md  README.md  codegen_preferences.py  package.xml  pyproject.toml  requirements.txt
.github/workflows/: codegen.yml  linting.yml  test.yml
doc/: developing.md
freecad/gridfinity_workbench/: __init__.py  baseplate_feature_construction.py  check_version.py  commands.py  const.py  custom_shape.py  custom_shape_features.py  defaults.py  feature_construction.py  feature_construction_complex_bin.py  features.py  grid_initial_layout.py  gridfinity_types.py  init_gui.py  label_shelf.py  magnet_hole.py  preferences.py  test_gridfinity.py  utils.py  version.py
freecad/gridfinity_workbench/preferences/: __init__.py  auto.py
freecad/gridfinity_workbench/ui/: preferences-default.ui  preferences-features.ui  preferences-misc.ui  preferences-objects.ui  preferences-standard.ui  preferences.ui
tests/: test_unit_utils.py
tools/: Dockerfile
